apps/media/plex/networkpolicies/plex.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: plex
  namespace: media
spec:
  endpointSelector:
    matchLabels:
      app: plex
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: traefik-traefik
            app.kubernetes.io/name: traefik
            io.kubernetes.pod.namespace: traefik
        - matchLabels:
            app: sonarr
            io.kubernetes.pod.namespace: media
        - matchLabels:
            app: radarr
            io.kubernetes.pod.namespace: media
        - matchLabels:
            app: tautulli
            io.kubernetes.pod.namespace: media
      toPorts:
        - ports:
            - port: "32400"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "80"
        - ports:
            - port: "443"
